Backend authentication and authorization implemented successfully